--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^5.10.16",
     "@mui/x-data-grid": "^5.17.14",
     "@mui/x-data-grid-generator": "^5.17.14",
+    "@mui/x-date-pickers": "^6.0.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,7 +17,7 @@
     "axios": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.40.0",
+    "react-hook-form": "^7.43.8",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.4.4",
     "react-scripts": "^2.1.3",
