--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@trendmicro/react-sidenav": "^0.5.0",
+    "apexcharts": "^3.18.0",
     "axios": "^1.2.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
