--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@trendmicro/react-sidenav": "^0.5.0",
     "apexcharts": "^3.18.0",
     "axios": "^1.2.0",
+    "dayjs": "^1.11.7",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
