Report table done

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# REACT_APP_URL="https://diamond-91df.onrender.com/api/"
-REACT_APP_URL="http://localhost:5000/api/"
+REACT_APP_URL="https://diamond-91df.onrender.com/api/"
+# REACT_APP_URL="http://localhost:5000/api/"
