--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.8",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.4.4",
     "react-scripts": "^5.0.1",
